nodejs/versioned_docs/version-1.18/api/class-testinfo.mdx
---
id: class-testinfo
title: "TestInfo"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

`TestInfo` contains information about currently running test. It is available to any test function, [test.beforeEach(hookFunction)](./api/class-test.mdx#test-before-each) and [test.afterEach(hookFunction)](./api/class-test.mdx#test-after-each) hooks and test-scoped fixtures. `TestInfo` provides utilities to control test execution: attach files, update test timeout, determine which test is currently running and whether it was retried, etc.

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
import { test, expect } from '@playwright/test';

test('basic test', async ({ page }, testInfo) => {
  expect(testInfo.title).toBe('basic test');
  await page.screenshot(testInfo.outputPath('screenshot.png'));
});
```

</TabItem>
<TabItem value="js">

```js
const { test, expect } = require('@playwright/test');

test('basic test', async ({ page }, testInfo) => {
  expect(testInfo.title).toBe('basic test');
  await page.screenshot(testInfo.outputPath('screenshot.png'));
});
```

</TabItem>
</Tabs>


- [testInfo.attach(name[, options])](./api/class-testinfo.mdx#test-info-attach)
- [testInfo.fail([condition, description])](./api/class-testinfo.mdx#test-info-fail)
- [testInfo.fixme([condition, description])](./api/class-testinfo.mdx#test-info-fixme)
- [testInfo.outputPath(pathSegments)](./api/class-testinfo.mdx#test-info-output-path)
- [testInfo.setTimeout(timeout)](./api/class-testinfo.mdx#test-info-set-timeout)
- [testInfo.skip([condition, description])](./api/class-testinfo.mdx#test-info-skip)
- [testInfo.slow([condition, description])](./api/class-testinfo.mdx#test-info-slow)
- [testInfo.snapshotPath(pathSegments)](./api/class-testinfo.mdx#test-info-snapshot-path)
- [testInfo.annotations](./api/class-testinfo.mdx#test-info-annotations)
- [testInfo.attachments](./api/class-testinfo.mdx#test-info-attachments)
- [testInfo.column](./api/class-testinfo.mdx#test-info-column)
- [testInfo.config](./api/class-testinfo.mdx#test-info-config)
- [testInfo.duration](./api/class-testinfo.mdx#test-info-duration)
- [testInfo.error](./api/class-testinfo.mdx#test-info-error)
- [testInfo.expectedStatus](./api/class-testinfo.mdx#test-info-expected-status)
- [testInfo.file](./api/class-testinfo.mdx#test-info-file)
- [testInfo.fn](./api/class-testinfo.mdx#test-info-fn)
- [testInfo.line](./api/class-testinfo.mdx#test-info-line)
- [testInfo.outputDir](./api/class-testinfo.mdx#test-info-output-dir)
- [testInfo.parallelIndex](./api/class-testinfo.mdx#test-info-parallel-index)
- [testInfo.project](./api/class-testinfo.mdx#test-info-project)
- [testInfo.repeatEachIndex](./api/class-testinfo.mdx#test-info-repeat-each-index)
- [testInfo.retry](./api/class-testinfo.mdx#test-info-retry)
- [testInfo.snapshotDir](./api/class-testinfo.mdx#test-info-snapshot-dir)
- [testInfo.snapshotSuffix](./api/class-testinfo.mdx#test-info-snapshot-suffix)
- [testInfo.status](./api/class-testinfo.mdx#test-info-status)
- [testInfo.stderr](./api/class-testinfo.mdx#test-info-stderr)
- [testInfo.stdout](./api/class-testinfo.mdx#test-info-stdout)
- [testInfo.timeout](./api/class-testinfo.mdx#test-info-timeout)
- [testInfo.title](./api/class-testinfo.mdx#test-info-title)
- [testInfo.titlePath](./api/class-testinfo.mdx#test-info-title-path)
- [testInfo.workerIndex](./api/class-testinfo.mdx#test-info-worker-index)

## testInfo.attach(name[, options]) {#test-info-attach}
- `name`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-info-attach-option-name"/> &#60;[string]&#62;<a href="#test-info-attach-option-name" class="list-anchor">#</a>
- `options` &#60;[Object]&#62;
  - `body`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-info-attach-option-body"/> &#60;[string]|[Buffer]&#62;<a href="#test-info-attach-option-body" class="list-anchor">#</a>
  - `contentType`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-info-attach-option-content-type"/> &#60;[void]|[string]&#62;<a href="#test-info-attach-option-content-type" class="list-anchor">#</a>
  - `path`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-info-attach-option-path"/> &#60;[string]&#62;<a href="#test-info-attach-option-path" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-info-attach-return"/> &#60;[void]&#62;<a href="#test-info-attach-return" class="list-anchor">#</a>

Attach a value or a file from disk to the current test. Some reporters show test attachments. Either `path` or `body` must be specified, but not both.

For example, you can attach a screenshot to the test:

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
import { test, expect } from '@playwright/test';

test('basic test', async ({ page }, testInfo) => {
  await page.goto('https://playwright.dev');
  const screenshot = await page.screenshot();
  await testInfo.attach('screenshot', { body: screenshot, contentType: 'image/png' });
});
```

</TabItem>
<TabItem value="js">

```js
const { test, expect } = require('@playwright/test');

test('basic test', async ({ page }, testInfo) => {
  await page.goto('https://playwright.dev');
  const screenshot = await page.screenshot();
  await testInfo.attach('screenshot', { body: screenshot, contentType: 'image/png' });
});
```

</TabItem>
</Tabs>

Or you can attach files returned by your APIs:

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
import { test, expect } from '@playwright/test';

test('basic test', async ({}, testInfo) => {
  const { download } = require('./my-custom-helpers');
  const tmpPath = await download('a');
  await testInfo.attach('downloaded', { path: tmpPath });
});
```

</TabItem>
<TabItem value="js">

```js
const { test, expect } = require('@playwright/test');

test('basic test', async ({}, testInfo) => {
  const { download } = require('./my-custom-helpers');
  const tmpPath = await download('a');
  await testInfo.attach('downloaded', { path: tmpPath });
});
```

</TabItem>
</Tabs>

:::note
[testInfo.attach(name[, options])](./api/class-testinfo.mdx#test-info-attach) automatically takes care of copying attached files to a location that is accessible to reporters. You can safely remove the attachment after awaiting the attach call.
:::

## testInfo.fail([condition, description]) {#test-info-fail}
- `condition`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-info-fail-option-condition"/> &#60;[void]|[boolean]&#62; Optional condition - the test is marked as "should fail" when the condition is `true`.<a href="#test-info-fail-option-condition" class="list-anchor">#</a>
- `description`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-info-fail-option-description"/> &#60;[void]|[string]&#62; Optional description that will be reflected in a test report.<a href="#test-info-fail-option-description" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-info-fail-return"/> &#60;[void]&#62;<a href="#test-info-fail-return" class="list-anchor">#</a>

Marks the currently running test as "should fail". Playwright Test ensures that this test is actually failing. This is similar to [test.fail([condition, description])](./api/class-test.mdx#test-fail).

## testInfo.fixme([condition, description]) {#test-info-fixme}
- `condition`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-info-fixme-option-condition"/> &#60;[void]|[boolean]&#62; Optional condition - the test is marked as "fixme" when the condition is `true`.<a href="#test-info-fixme-option-condition" class="list-anchor">#</a>
- `description`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-info-fixme-option-description"/> &#60;[void]|[string]&#62; Optional description that will be reflected in a test report.<a href="#test-info-fixme-option-description" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-info-fixme-return"/> &#60;[void]&#62;<a href="#test-info-fixme-return" class="list-anchor">#</a>

Marks the currently running test as "fixme". The test will be skipped, but the intention is to fix it. This is similar to [test.fixme()](./api/class-test.mdx#test-fixme-2).

## testInfo.outputPath(pathSegments) {#test-info-output-path}
- `pathSegments`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-info-output-path-option-path-segments"/> &#60;[string...]&#62; Path segments to append at the end of the resulting path.<a href="#test-info-output-path-option-path-segments" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-info-output-path-return"/> &#60;[string]&#62;<a href="#test-info-output-path-return" class="list-anchor">#</a>

Returns a path inside the [testInfo.outputDir](./api/class-testinfo.mdx#test-info-output-dir) where the test can safely put a temporary file. Guarantees that tests running in parallel will not interfere with each other.

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
import { test, expect } from '@playwright/test';
import fs from 'fs';

test('example test', async ({}, testInfo) => {
  const file = testInfo.outputPath('dir', 'temporary-file.txt');
  await fs.promises.writeFile(file, 'Put some data to the dir/temporary-file.txt', 'utf8');
});
```

</TabItem>
<TabItem value="js">

```js
const { test, expect } = require('@playwright/test');
const fs = require('fs');

test('example test', async ({}, testInfo) => {
  const file = testInfo.outputPath('dir', 'temporary-file.txt');
  await fs.promises.writeFile(file, 'Put some data to the dir/temporary-file.txt', 'utf8');
});
```

</TabItem>
</Tabs>

> Note that `pathSegments` accepts path segments to the test output directory such as `testInfo.outputPath('relative', 'path', 'to', 'output')`.
> However, this path must stay within the [testInfo.outputDir](./api/class-testinfo.mdx#test-info-output-dir) directory for each test (i.e. `test-results/a-test-title`), otherwise it will throw.

## testInfo.setTimeout(timeout) {#test-info-set-timeout}
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-info-set-timeout-option-timeout"/> &#60;[number]&#62; Timeout in milliseconds.<a href="#test-info-set-timeout-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-info-set-timeout-return"/> &#60;[void]&#62;<a href="#test-info-set-timeout-return" class="list-anchor">#</a>

Changes the timeout for the currently running test. Zero means no timeout. Learn more about [various timeouts](./test-timeouts.mdx).

Timeout is usually specified in the [configuration file](./test-configuration.mdx), but it could be useful to change the timeout in certain scenarios:

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
import { test, expect } from '@playwright/test';

test.beforeEach(async ({ page }, testInfo) => {
  // Extend timeout for all tests running this hook by 30 seconds.
  testInfo.setTimeout(testInfo.timeout + 30000);
});
```

</TabItem>
<TabItem value="js">

```js
const { test, expect } = require('@playwright/test');

test.beforeEach(async ({ page }, testInfo) => {
  // Extend timeout for all tests running this hook by 30 seconds.
  testInfo.setTimeout(testInfo.timeout + 30000);
});
```

</TabItem>
</Tabs>

## testInfo.skip([condition, description]) {#test-info-skip}
- `condition`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-info-skip-option-condition"/> &#60;[void]|[boolean]&#62; Optional condition - the test is skipped when the condition is `true`.<a href="#test-info-skip-option-condition" class="list-anchor">#</a>
- `description`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-info-skip-option-description"/> &#60;[void]|[string]&#62; Optional description that will be reflected in a test report.<a href="#test-info-skip-option-description" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-info-skip-return"/> &#60;[void]&#62;<a href="#test-info-skip-return" class="list-anchor">#</a>

Skips the currently running test. This is similar to [test.skip()](./api/class-test.mdx#test-skip-2).

## testInfo.slow([condition, description]) {#test-info-slow}
- `condition`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-info-slow-option-condition"/> &#60;[void]|[boolean]&#62; Optional condition - the test is marked as "slow" when the condition is `true`.<a href="#test-info-slow-option-condition" class="list-anchor">#</a>
- `description`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-info-slow-option-description"/> &#60;[void]|[string]&#62; Optional description that will be reflected in a test report.<a href="#test-info-slow-option-description" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-info-slow-return"/> &#60;[void]&#62;<a href="#test-info-slow-return" class="list-anchor">#</a>

Marks the currently running test as "slow", giving it triple the default timeout. This is similar to [test.slow([condition, description])](./api/class-test.mdx#test-slow).

## testInfo.snapshotPath(pathSegments) {#test-info-snapshot-path}
- `pathSegments`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-info-snapshot-path-option-path-segments"/> &#60;[string...]&#62; The name of the snapshot or the path segments to define the snapshot file path. Snapshots with the same name in the same test file are expected to be the same.<a href="#test-info-snapshot-path-option-path-segments" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-info-snapshot-path-return"/> &#60;[string]&#62;<a href="#test-info-snapshot-path-return" class="list-anchor">#</a>

Returns a path to a snapshot file with the given `pathSegments`. Learn more about [snapshots](./test-snapshots.mdx).

> Note that `pathSegments` accepts path segments to the snapshot file such as `testInfo.snapshotPath('relative', 'path', 'to', 'snapshot.png')`.
> However, this path must stay within the snapshots directory for each test file (i.e. `a.spec.js-snapshots`), otherwise it will throw.

## testInfo.annotations {#test-info-annotations}
- type: &#60;[Array]<[Object]>&#62;
  - `type` &#60;[string]&#62; Annotation type, for example `'skip'` or `'fail'`.
  - `description` &#60;[void]|[string]&#62; Optional description.

The list of annotations applicable to the current test. Includes annotations from the test, annotations from all [test.describe(title, callback)](./api/class-test.mdx#test-describe) groups the test belongs to and file-level annotations for the test file.

Learn more about [test annotations](./test-annotations.mdx).

## testInfo.attachments {#test-info-attachments}
- type: &#60;[Array]<[Object]>&#62;
  - `name` &#60;[string]&#62; Attachment name.
  - `contentType` &#60;[string]&#62; Content type of this attachment to properly present in the report, for example `'application/json'` or `'image/png'`.
  - `path` &#60;[void]|[string]&#62; Optional path on the filesystem to the attached file.
  - `body` &#60;[void]|[Buffer]&#62; Optional attachment body used instead of a file.

The list of files or buffers attached to the current test. Some reporters show test attachments.

To add an attachment, use [testInfo.attach(name[, options])](./api/class-testinfo.mdx#test-info-attach) instead of directly pushing onto this array.

## testInfo.column {#test-info-column}
- type: &#60;[number]&#62;

Column number where the currently running test is declared.

## testInfo.config {#test-info-config}
- type: &#60;[TestConfig]&#62;

Processed configuration from the [configuration file](./test-configuration.mdx).

## testInfo.duration {#test-info-duration}
- type: &#60;[number]&#62;

The number of milliseconds the test took to finish. Always zero before the test finishes, either successfully or not. Can be used in [test.afterEach(hookFunction)](./api/class-test.mdx#test-after-each) hook.

## testInfo.error {#test-info-error}
- type: &#60;[Object]&#62;
  - `message` &#60;[void]|[string]&#62; Error message. Set when `Error` (or its subclass) has been thrown.
  - `stack` &#60;[void]|[string]&#62; Error stack. Set when `Error` (or its subclass) has been thrown.
  - `value` &#60;[void]|[string]&#62; The thrown value. Set when anything except the `Error` (or its subclass) has been thrown.

An error thrown during test execution, if any.

## testInfo.expectedStatus {#test-info-expected-status}
- type: &#60;"passed"|"failed"|"timedOut"|"skipped"&#62;

Expected status for the currently running test. This is usually `'passed'`, except for a few cases:
* `'skipped'` for skipped tests, e.g. with [test.skip()](./api/class-test.mdx#test-skip-2);
* `'failed'` for tests marked as failed with [test.fail([condition, description])](./api/class-test.mdx#test-fail).

Expected status is usually compared with the actual [testInfo.status](./api/class-testinfo.mdx#test-info-status):

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
import { test, expect } from '@playwright/test';

test.afterEach(async ({}, testInfo) => {
  if (testInfo.status !== testInfo.expectedStatus)
    console.log(`${testInfo.title} did not run as expected!`);
});
```

</TabItem>
<TabItem value="js">

```js
const { test, expect } = require('@playwright/test');

test.afterEach(async ({}, testInfo) => {
  if (testInfo.status !== testInfo.expectedStatus)
    console.log(`${testInfo.title} did not run as expected!`);
});
```

</TabItem>
</Tabs>

## testInfo.file {#test-info-file}
- type: &#60;[string]&#62;

Absolute path to a file where the currently running test is declared.

## testInfo.fn {#test-info-fn}
- type: &#60;[function]\([TestArgs], [TestInfo]\)&#62;

Test function as passed to `test(title, testFunction)`.

## testInfo.line {#test-info-line}
- type: &#60;[number]&#62;

Line number where the currently running test is declared.

## testInfo.outputDir {#test-info-output-dir}
- type: &#60;[string]&#62;

Absolute path to the output directory for this specific test run. Each test run gets its own directory so they cannot conflict.

## testInfo.parallelIndex {#test-info-parallel-index}
- type: &#60;[number]&#62;

The index of the worker between `0` and `workers - 1`. It is guaranteed that workers running at the same time have a different `parallelIndex`. When a worker is restarted, for example after a failure, the new worker process has the same `parallelIndex`.

Also available as `process.env.TEST_PARALLEL_INDEX`. Learn more about [parallelism and sharding](./test-parallel.mdx) with Playwright Test.

## testInfo.project {#test-info-project}
- type: &#60;[TestProject]&#62;

Processed project configuration from the [configuration file](./test-configuration.mdx).

## testInfo.repeatEachIndex {#test-info-repeat-each-index}
- type: &#60;[number]&#62;

Specifies a unique repeat index when running in "repeat each" mode. This mode is enabled by passing `--repeat-each` to the [command line](./test-cli.mdx).

## testInfo.retry {#test-info-retry}
- type: &#60;[number]&#62;

Specifies the retry number when the test is retried after a failure. The first test run has [testInfo.retry](./api/class-testinfo.mdx#test-info-retry) equal to zero, the first retry has it equal to one, and so on. Learn more about [retries](./test-retries.mdx#retries).

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
import { test, expect } from '@playwright/test';

test.beforeEach(async ({}, testInfo) => {
  // You can access testInfo.retry in any hook or fixture.
  if (testInfo.retry > 0)
    console.log(`Retrying!`);
});

test('my test', async ({ page }, testInfo) => {
  // Here we clear some server-side state when retrying.
  if (testInfo.retry)
    await cleanSomeCachesOnTheServer();
  // ...
});
```

</TabItem>
<TabItem value="js">

```js
const { test, expect } = require('@playwright/test');

test.beforeEach(async ({}, testInfo) => {
  // You can access testInfo.retry in any hook or fixture.
  if (testInfo.retry > 0)
    console.log(`Retrying!`);
});

test('my test', async ({ page }, testInfo) => {
  // Here we clear some server-side state when retrying.
  if (testInfo.retry)
    await cleanSomeCachesOnTheServer();
  // ...
});
```

</TabItem>
</Tabs>

## testInfo.snapshotDir {#test-info-snapshot-dir}
- type: &#60;[string]&#62;

Absolute path to the snapshot output directory for this specific test. Each test suite gets its own directory so they cannot conflict.

## testInfo.snapshotSuffix {#test-info-snapshot-suffix}
- type: &#60;[string]&#62;

Suffix used to differentiate snapshots between multiple test configurations. For example, if snapshots depend on the platform, you can set `testInfo.snapshotSuffix` equal to `process.platform`. In this case `expect(value).toMatchSnapshot(snapshotName)` will use different snapshots depending on the platform. Learn more about [snapshots](./test-snapshots.mdx).

## testInfo.status {#test-info-status}
- type: &#60;[void]|"passed"|"failed"|"timedOut"|"skipped"&#62;

Actual status for the currently running test. Available after the test has finished in [test.afterEach(hookFunction)](./api/class-test.mdx#test-after-each) hook and fixtures.

Status is usually compared with the [testInfo.expectedStatus](./api/class-testinfo.mdx#test-info-expected-status):

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
import { test, expect } from '@playwright/test';

test.afterEach(async ({}, testInfo) => {
  if (testInfo.status !== testInfo.expectedStatus)
    console.log(`${testInfo.title} did not run as expected!`);
});
```

</TabItem>
<TabItem value="js">

```js
const { test, expect } = require('@playwright/test');

test.afterEach(async ({}, testInfo) => {
  if (testInfo.status !== testInfo.expectedStatus)
    console.log(`${testInfo.title} did not run as expected!`);
});
```

</TabItem>
</Tabs>

## testInfo.stderr {#test-info-stderr}
- type: &#60;[Array]<[string]|[Buffer]>&#62;

Output written to `process.stderr` or `console.error` during the test execution.

## testInfo.stdout {#test-info-stdout}
- type: &#60;[Array]<[string]|[Buffer]>&#62;

Output written to `process.stdout` or `console.log` during the test execution.

## testInfo.timeout {#test-info-timeout}
- type: &#60;[number]&#62;

Timeout in milliseconds for the currently running test. Zero means no timeout. Learn more about [various timeouts](./test-timeouts.mdx).

Timeout is usually specified in the [configuration file](./test-configuration.mdx)

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
import { test, expect } from '@playwright/test';

test.beforeEach(async ({ page }, testInfo) => {
  // Extend timeout for all tests running this hook by 30 seconds.
  testInfo.setTimeout(testInfo.timeout + 30000);
});
```

</TabItem>
<TabItem value="js">

```js
const { test, expect } = require('@playwright/test');

test.beforeEach(async ({ page }, testInfo) => {
  // Extend timeout for all tests running this hook by 30 seconds.
  testInfo.setTimeout(testInfo.timeout + 30000);
});
```

</TabItem>
</Tabs>

## testInfo.title {#test-info-title}
- type: &#60;[string]&#62;

The title of the currently running test as passed to `test(title, testFunction)`.

## testInfo.titlePath {#test-info-title-path}
- type: &#60;[Array]<[string]>&#62;

The full title path starting with the project.

## testInfo.workerIndex {#test-info-worker-index}
- type: &#60;[number]&#62;

The unique index of the worker process that is running the test. When a worker is restarted, for example after a failure, the new worker process gets a new unique `workerIndex`.

Also available as `process.env.TEST_WORKER_INDEX`. Learn more about [parallelism and sharding](./test-parallel.mdx) with Playwright Test.

[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[Android]: ./api/class-android.mdx "Android"
[AndroidDevice]: ./api/class-androiddevice.mdx "AndroidDevice"
[AndroidInput]: ./api/class-androidinput.mdx "AndroidInput"
[AndroidSocket]: ./api/class-androidsocket.mdx "AndroidSocket"
[AndroidWebView]: ./api/class-androidwebview.mdx "AndroidWebView"
[APIRequest]: ./api/class-apirequest.mdx "APIRequest"
[APIRequestContext]: ./api/class-apirequestcontext.mdx "APIRequestContext"
[APIResponse]: ./api/class-apiresponse.mdx "APIResponse"
[APIResponseAssertions]: ./api/class-apiresponseassertions.mdx "APIResponseAssertions"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserServer]: ./api/class-browserserver.mdx "BrowserServer"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[CDPSession]: ./api/class-cdpsession.mdx "CDPSession"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Coverage]: ./api/class-coverage.mdx "Coverage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[Electron]: ./api/class-electron.mdx "Electron"
[ElectronApplication]: ./api/class-electronapplication.mdx "ElectronApplication"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[FrameLocator]: ./api/class-framelocator.mdx "FrameLocator"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Locator]: ./api/class-locator.mdx "Locator"
[LocatorAssertions]: ./api/class-locatorassertions.mdx "LocatorAssertions"
[Logger]: ./api/class-logger.mdx "Logger"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[PageAssertions]: ./api/class-pageassertions.mdx "PageAssertions"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[PlaywrightAssertions]: ./api/class-playwrightassertions.mdx "PlaywrightAssertions"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[Worker]: ./api/class-worker.mdx "Worker"
[Fixtures]: ./api/class-fixtures.mdx "Fixtures"
[Test]: ./api/class-test.mdx "Test"
[TestConfig]: ./api/class-testconfig.mdx "TestConfig"
[TestError]: ./api/class-testerror.mdx "TestError"
[TestInfo]: ./api/class-testinfo.mdx "TestInfo"
[TestOptions]: ./api/class-testoptions.mdx "TestOptions"
[TestProject]: ./api/class-testproject.mdx "TestProject"
[WorkerInfo]: ./api/class-workerinfo.mdx "WorkerInfo"
[Location]: ./api/class-location.mdx "Location"
[Reporter]: ./api/class-reporter.mdx "Reporter"
[Suite]: ./api/class-suite.mdx "Suite"
[TestCase]: ./api/class-testcase.mdx "TestCase"
[TestResult]: ./api/class-testresult.mdx "TestResult"
[TestStep]: ./api/class-teststep.mdx "TestStep"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./evaluating.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[Array]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array "Array"
[boolean]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Boolean_type "Boolean"
[Buffer]: https://nodejs.org/api/buffer.html#buffer_class_buffer "Buffer"
[ChildProcess]: https://nodejs.org/api/child_process.html "ChildProcess"
[Error]: https://nodejs.org/api/errors.html#errors_class_error "Error"
[EventEmitter]: https://nodejs.org/api/events.html#events_class_eventemitter "EventEmitter"
[function]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Function "Function"
[Map]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Map "Map"
[null]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/null "null"
[number]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Number_type "Number"
[Object]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object "Object"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[Readable]: https://nodejs.org/api/stream.html#stream_class_stream_readable "Readable"
[RegExp]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/RegExp "RegExp"
[string]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#String_type "string"
[void]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/undefined "void"
[URL]: https://nodejs.org/api/url.html "URL"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright/blob/master/utils/docker/Dockerfile.focal "Dockerfile.focal"
